FIND_PACKAGE(OpenCV REQUIRED)
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})
LIST(APPEND LIBS ${OpenCV_LIBS})

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/opencv)
LIST(APPEND HEADERS ${CMAKE_SOURCE_DIR}/opencv/opencv_video_source.h)
LIST(APPEND HEADERS ${CMAKE_SOURCE_DIR}/opencv/opencv_video_target.h)
LIST(APPEND SOURCES ${CMAKE_SOURCE_DIR}/opencv/opencv_video_source.cpp)
LIST(APPEND SOURCES ${CMAKE_SOURCE_DIR}/opencv/opencv_video_target.cpp)

SET(HEADERS ${HEADERS} CACHE INTERNAL "Added header files for OpenCV")
SET(SOURCES ${SOURCES} CACHE INTERNAL "Added source files for OpenCV")
