FILE(COPY
    test_unit.py
    test_observer.py
    conftest.py
    DESTINATION ${CMAKE_CURRENT_BINARY_DIR}
)

# If user has not defined network source delay
if(NOT DEFINED TESTING_NETWORK_SOURCE_DELAY)
    SET(TESTING_NETWORK_SOURCE_DELAY 0.0)
endif(NOT DEFINED TESTING_NETWORK_SOURCE_DELAY)

# VideoSourceFactory
SET(VIDEO_SOURCE_FACTORY_TEST test_video_source_factory_network_source)
ADD_EXECUTABLE(
    ${VIDEO_SOURCE_FACTORY_TEST} test_video_source_factory.cpp
)
TARGET_LINK_LIBRARIES(
    ${VIDEO_SOURCE_FACTORY_TEST}
    ${LIBS} ${NAME}
)
foreach(COLOUR_SPACE ${COLOUR_SPACES})
    # This is due to issue #135
    if(COLOUR_SPACE STREQUAL "I420")
        SET(NETWORK_SOURCE_DELAY_PARAM ${TESTING_NETWORK_SOURCE_DELAY})
    endif(COLOUR_SPACE STREQUAL "I420")

    SET(NAME_TEST Test_Network_VideoSourceFactory_${COLOUR_SPACE})
    ADD_TEST(NAME ${NAME_TEST}
        COMMAND ${VIDEO_SOURCE_FACTORY_TEST} ${NETWORK_SOURCE_ADDRESS} ${COLOUR_SPACE} ${NETWORK_SOURCE_DELAY_PARAM}
    )
    LIST(APPEND TESTS_LIST ${NAME_TEST})
endforeach(COLOUR_SPACE)

# The actual network source
foreach(COLOUR_SPACE ${COLOUR_SPACES})
    # This is due to issue #135
    if(COLOUR_SPACE STREQUAL "I420")
        SET(NETWORK_SOURCE_DELAY_VALUE ${TESTING_NETWORK_SOURCE_DELAY})
    else(COLOUR_SPACE STREQUAL "I420")
        SET(NETWORK_SOURCE_DELAY_VALUE 0)
    endif(COLOUR_SPACE STREQUAL "I420")

    SET(NAME_TEST Test_Network_${COLOUR_SPACE})
    ADD_TEST(NAME ${NAME_TEST}
        COMMAND py.test --address=${NETWORK_SOURCE_ADDRESS} --colour-space=${COLOUR_SPACE} --init-delay=${NETWORK_SOURCE_DELAY_VALUE} test_unit.py
    )
    LIST(APPEND TESTS_LIST ${NAME_TEST})
endforeach(COLOUR_SPACE)

# Network source using the observer pattern
foreach(COLOUR_SPACE ${COLOUR_SPACES})
    # This is due to issue #135
    if(COLOUR_SPACE STREQUAL "I420")
        SET(NETWORK_SOURCE_DELAY_VALUE ${TESTING_NETWORK_SOURCE_DELAY})
    else(COLOUR_SPACE STREQUAL "I420")
        SET(NETWORK_SOURCE_DELAY_VALUE 0)
    endif(COLOUR_SPACE STREQUAL "I420")

    SET(NAME_TEST Test_Network_ObserverPattern_${COLOUR_SPACE}_${NETWORK_SOURCE_FRAME_RATE}fps)

    ADD_TEST(NAME ${NAME_TEST}
        COMMAND py.test --address=${NETWORK_SOURCE_ADDRESS} --colour-space=${COLOUR_SPACE} --frame-rate=${NETWORK_SOURCE_FRAME_RATE} --observers=3 --init-delay=${NETWORK_SOURCE_DELAY_VALUE} test_observer.py
    )
    LIST(APPEND TESTS_LIST ${NAME_TEST})
endforeach(COLOUR_SPACE)

# to avoid copying stuff around
SET_TESTS_PROPERTIES(${TESTS_LIST}
    PROPERTIES ENVIRONMENT "PYTHONPATH=${PYTHONPATH}"
)
