SET(ARGB_TO_BGRA_PROFILER argb_to_bgra_profiler)
ADD_EXECUTABLE(
    ${ARGB_TO_BGRA_PROFILER}
    ${CMAKE_SOURCE_DIR}/tests/rgbswap/profile_argb_to_bgra.cpp
)
if(USE_FFMPEG)
    SET(ARGB_TO_BGRA_PROFILER_LIBS ${FFmpeg_LIBS})
endif(USE_FFMPEG)
TARGET_LINK_LIBRARIES(
    ${ARGB_TO_BGRA_PROFILER} ${ARGB_TO_BGRA_PROFILER_LIBS}
)
