SET(RGB_TO_BGRA_PROFILER rgb_to_bgra_profiler)
ADD_EXECUTABLE(
    ${RGB_TO_BGRA_PROFILER}
    ${CMAKE_SOURCE_DIR}/tests/rgbswap/profile_rgb_to_bgra.cpp
)
if(USE_FFMPEG)
    LIST(APPEND RGB_TO_BGRA_PROFILER_LIBS ${FFmpeg_LIBS})
endif(USE_FFMPEG)
if(USE_OPENCV)
    LIST(APPEND RGB_TO_BGRA_PROFILER_LIBS ${OpenCV_LIBS})
endif(USE_OPENCV)
TARGET_LINK_LIBRARIES(
    ${RGB_TO_BGRA_PROFILER} ${RGB_TO_BGRA_PROFILER_LIBS}
)
